--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body{
     flex-wrap : wrap;
     justify-content : space-around;
     font-family: "Trebuchet MS", Verdana, Geneva, Arial;
-    background-color: #eefffe;
+    background-color: #ffffff;
 }
 #game {
     flex-basis :70%;
